--- a/src/main/book-filtered/changelog.jspx
+++ b/src/main/book-filtered/changelog.jspx
@@ -254,7 +254,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{project.name}"
 			version="1.1"
 			dateCreated="2016-08-07T23:39:00-0500"
-			groupId="@{project.groupId}"
+			groupId="com.aoindustries"
 			artifactId="ao-web-page-servlet"
 			scmUrl="@{project.scm.url}"
 		>
@@ -267,7 +267,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{project.name}"
 			version="1.0"
 			dateCreated="2016-08-07T10:49:00-0500"
-			groupId="@{project.groupId}"
+			groupId="com.aoindustries"
 			artifactId="ao-web-page-servlet"
 			scmUrl="@{project.scm.url}"
 		>
