--- a/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
@@ -36,7 +36,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-30T18:16:13-0500"
-		dateModified="2016-11-13T21:10:46-0600"
+		dateModified="2016-11-15T17:35:38-0600"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.semanticcms:semanticcms-core-servlet:pom.version}" />
@@ -51,19 +51,28 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 				groupId="@{documented.groupId}"
 				artifactId="@{documented.artifactId}"
 				scmUrl="@{documented.scm.url}"
-			>
-				<ul>
-					<li>New <ao:a href="https://aoindustries.com/ao-oss-parent/">AO OSS Parent</ao:a> POM to simplify <code>pom.xml</code> files.</li>
-					<li>Added support for dateCreated, datePublished, dateModified, and dateReviewed.</li>
-					<li>Project documentation moved to per-project book in <core:link book="/" page="/index.jspx" /> format.</li>
-					<li>Added changelog as top-level project link.</li>
-					<li><code>/WEB-INF/books.properties</code> changed to XML at <code>/WEB-INF/books.xml</code> with XML Schema defined at
-						<!-- TODO: file:file once cvsworkDirectory no longer required -->
-						<ao:a href="books-1.0.xsd">books-1.0.xsd</ao:a>.
-					</li>
-				</ul>
-			</changelog:release>
+			/>
 		</c:if>
+
+		<changelog:release
+			projectName="@{documented.name}"
+			version="1.10.0"
+			datePublished="2016-11-15T17:35:38-0600"
+			groupId="@{documented.groupId}"
+			artifactId="@{documented.artifactId}"
+			scmUrl="@{documented.scm.url}"
+		>
+			<ul>
+				<li>New <ao:a href="https://aoindustries.com/ao-oss-parent/">AO OSS Parent</ao:a> POM to simplify <code>pom.xml</code> files.</li>
+				<li>Added support for dateCreated, datePublished, dateModified, and dateReviewed.</li>
+				<li>Project documentation moved to per-project book in <core:link book="/" page="/index.jspx" /> format.</li>
+				<li>Added changelog as top-level project link.</li>
+				<li><code>/WEB-INF/books.properties</code> changed to XML at <code>/WEB-INF/books.xml</code> with XML Schema defined at
+					<!-- TODO: file:file once cvsworkDirectory no longer required -->
+					<ao:a href="books-1.0.xsd">books-1.0.xsd</ao:a>.
+				</li>
+			</ul>
+		</changelog:release>
 
 		<changelog:release
 			projectName="@{documented.name}"
