--- a/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
@@ -36,7 +36,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-30T18:16:13-0500"
-		dateModified="2017-03-30T15:07:31-0500"
+		dateModified="2017-07-13T14:36:40-0500"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.semanticcms:semanticcms-core-servlet:pom.version}" />
@@ -54,6 +54,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 			>
 				<ul>
 					<li>New release for bug fixes in underlying <ao:a href="https://aoindustries.com/ao-encoding/">AO Encoding</ao:a> library.</li>
+					<li>Nodes, including both pages and elements, now have properties.</li>
 				</ul>
 			</changelog:release>
 		</c:if>
