Working on domain and repository support in SemanticCMS 2.

--- a/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
@@ -37,7 +37,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-30T18:16:13-0500"
-		dateModified="2017-07-31T14:58:39-0500"
+		dateModified="2017-08-01T23:19:34-0500"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.semanticcms:semanticcms-core-servlet:pom.version}" />
@@ -65,7 +65,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 								<!-- TODO: file:file once cvsworkDirectory no longer required -->
 								<ao:a href="books-2.0.xsd">books-2.0.xsd</ao:a>:
 								<ol type="a">
-									<li>New optional "domain" attribute on "missingBook" element.</li>
+									<li>New optional "domain" attribute on "missingBook" element, defaulting to "localhost".</li>
 									<li>TODO: New optional "canonicalBase" attribute on "missingBook" element.</li>
 									<li>New optional "base" attribute on "missingBook" element.</li>
 								</ol>
