--- a/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
@@ -63,11 +63,13 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 						<ol>
 							<li>New version of XML Schema for <code>/WEB-INF/books.xml</code> defined at
 								<!-- TODO: file:file once cvsworkDirectory no longer required -->
-								<ao:a href="books-2.0.xsd">books-2.0.xsd</ao:a>:
+								<ao:a href="books-1.1.xsd">books-1.1.xsd</ao:a>:
 								<ol type="a">
 									<li>New optional "domain" attribute on "missingBook" element, defaulting to "localhost".</li>
-									<li>TODO: New optional "canonicalBase" attribute on "missingBook" element.</li>
-									<li>New optional "base" attribute on "missingBook" element.</li>
+									<li>
+										New optional "base" attribute on "missingBook" element, used
+										to generate links to the missing content.
+									</li>
 								</ol>
 							</li>
 						</ol>
