--- a/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
@@ -106,7 +106,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 			<ul>
 				<li>New <ao:a href="https://aoindustries.com/ao-oss-parent/">AO OSS Parent</ao:a> POM to simplify <code>pom.xml</code> files.</li>
 				<li>Added support for dateCreated, datePublished, dateModified, and dateReviewed.</li>
-				<li>Project documentation moved to per-project book in <core:link book="/" page="/index.jspx" /> format.</li>
+				<li>Project documentation moved to per-project book in <core:link book="/" page="/" /> format.</li>
 				<li>Added changelog as top-level project link.</li>
 				<li><code>/WEB-INF/books.properties</code> changed to XML at <code>/WEB-INF/books.xml</code> with XML Schema defined at
 					<!-- TODO: file:file once cvsworkDirectory no longer required -->
