Creating a diagram for request processing flow.

--- a/book/src/main/resources-filtered/META-INF/resources/core/servlet/index.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/core/servlet/index.jspx
@@ -34,7 +34,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		shortTitle="@{documented.shortTitle}"
 		description="@{documented.description}"
 		datePublished="2016-10-18T18:08:00-0500"
-		dateModified="2017-07-31T14:58:39-0500"
+		dateModified="2017-08-25T01:28:37-0500"
 	>
 		<core:child page="changelog" />
 		<core:child page="apidocs/" />
@@ -65,6 +65,12 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 			<ul>
 				<li><ao:a href="books-1.0.xsd">books-1.0.xsd</ao:a></li>
 				<li><ao:a href="books-1.1.xsd">books-1.1.xsd</ao:a></li>
+			</ul>
+		</section:section>
+		<section:section label="Diagrams">
+			<!-- TODO: file:file and/or dia:dia once cvsworkDirectory no longer required -->
+			<ul>
+				<li><ao:a href="request-flow.dia">request-flow.dia</ao:a></li>
 			</ul>
 		</section:section>
 	</core:page>
