--- a/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
@@ -36,7 +36,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-30T18:16:13-0500"
-		dateModified="2019-10-06T15:47:38-0500"
+		dateModified="2019-10-08T01:38:29-0500"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.semanticcms:semanticcms-core-servlet:pom.version}" />
@@ -62,6 +62,11 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 						parameter.  Defaults to a very aggressive setting of public, one-year, allowing stale, and immutable.
 					</li>
 					<li>Defined MIME types, with a <code>UTF-8</code> default, in shared <code>web-fragment.xml</code></li>
+					<li>
+						Changed <code>CountConcurrencyFilter</code> from a <code><![CDATA[&lt;filter&gt;]]></code>
+						to a <code><![CDATA[&lt;listener&gt;]]></code> named
+						<ao:a href="apidocs/com/semanticcms/core/servlet/CountConcurrencyListener.html">CountConcurrencyListener</ao:a>.
+					</li>
 				</ul>
 			</changelog:release>
 		</c:if>
