Better shielding non-concurrency sub-requests during captures
with request and response wrappers.

--- a/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
@@ -36,7 +36,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-30T18:16:13-0500"
-		dateModified="2019-10-22T17:29:57-0500"
+		dateModified="2019-10-23T00:06:00-0500"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.semanticcms:semanticcms-core-servlet:pom.version}" />
@@ -58,6 +58,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 							<li>Registering doctype "html5" with new methods <code>Html.DocType.set(…)</code> and <code>Html.DocType.get(…)</code>.</li>
 							<li>Setting response content type to match the default serialization (HTML / XHTML) that will be applied during final render.</li>
 							<li>Setting response character set to <code>UTF-8</code>.</li>
+							<li>Better shielding non-concurrency sub-requests during captures with request and response wrappers.</li>
 						</ol>
 					</li>
 					<li>Moved Servlet subrequest utilities to new <ao:a href="https://aoindustries.com/ao-servlet-subrequest/">AO Servlet Subrequest</ao:a> project.</li>
