--- a/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
@@ -36,7 +36,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-30T18:16:13-0500"
-		dateModified="2019-10-23T00:06:00-0500"
+		dateModified="2019-10-27T16:59:13-0500"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.semanticcms:semanticcms-core-servlet:pom.version}" />
@@ -53,9 +53,10 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 				scmUrl="@{documented.scm.url}"
 			>
 				<ul>
+					<li>Now supports page attributes for <code>serialization</code> (default "auto") and <code>doctype</code> (default "HTML5").</li>
 					<li>Setting more values during captures:
 						<ol>
-							<li>Registering doctype "html5" with new methods <code>Html.DocType.set(…)</code> and <code>Html.DocType.get(…)</code>.</li>
+							<li>Registering doctype with new methods <code>Doctype.set(…)</code> and <code>Doctype.get(…)</code>.</li>
 							<li>Setting response content type to match the default serialization (HTML / XHTML) that will be applied during final render.</li>
 							<li>Setting response character set to <code>UTF-8</code>.</li>
 							<li>Better shielding non-concurrency sub-requests during captures with request and response wrappers.</li>
