--- a/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
@@ -36,7 +36,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-30T18:16:13-0500"
-		dateModified="2020-02-03T02:56:16-0600"
+		dateModified="2020-02-13T13:51:18-0600"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.semanticcms:semanticcms-core-servlet:pom.version}" />
@@ -57,7 +57,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 					<li>Now supports page attributes for <code>serialization</code> (default "auto") and <code>doctype</code> (default "HTML5").</li>
 					<li>Setting more values during captures:
 						<ol>
-							<li>Registering doctype with new methods <code>Doctype.set(…)</code> and <code>Doctype.get(…)</code>.</li>
+							<li>Registering doctype with new methods <code>DoctypeEE.set(…)</code> and <code>DoctypeEE.get(…)</code>.</li>
 							<li>Setting response content type to match the default serialization (HTML / XHTML) that will be applied during final render.</li>
 							<li>Setting response character set to <code>UTF-8</code>.</li>
 							<li>Better shielding non-concurrency sub-requests during captures with request and response wrappers.</li>
